scheduled jobs example using cron syntax

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+		
+        <!-- @Inject -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
 
 		<!-- Test -->
 		<dependency>
